# rf-comp-id

./: .gitignore  LICENSE  README.md  hello.py  myfunc.py  notebook_en.ipynb  pyproject.toml  pytemplate.py  requirements.txt
assets/: quarto_styles.css
