[project]
name = "rf-comp-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.3",
    "netcdf4>=1.7.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "rioxarray>=0.18.1",
    "xarray>=2024.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
