[project]
name = "rf-comp-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "calmap>=0.0.11",
    "cartopy>=0.24.1",
    "dash-bootstrap-templates>=1.3.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "matplotlib>=3.9.3",
    "netcdf4>=1.7.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "rioxarray>=0.18.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "xarray>=2024.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-cache>=1.0.1",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
]
